feat: added css names for seekleft and seekright buttons

--- a/src/sortingVisualizer/SortingVisualizer.css
+++ b/src/sortingVisualizer/SortingVisualizer.css
@@ -20,6 +20,17 @@
   background-image: url('/path/to/icon.svg');
 }
 
+.btn.seekLeft{
+  /* have to set background image */
+  background-image: url('/path/to/icon.svg');
+}
+
+.btn.seekRight{
+  /* have to set background image */
+  background-image: url('/path/to/icon.svg');
+}
+
+
 .btn.bubble {
   /* have to set background image */
   background-image: url('/path/to/icon.svg');
