feat: added quick sort, selection sort

--- a/src/sortingVisualizer/SortingVisualizer.css
+++ b/src/sortingVisualizer/SortingVisualizer.css
@@ -47,6 +47,22 @@
   top: 130px;
 }
 
+.btn.quick {
+  /* have to set background image */
+  background-image: url('/path/to/icon.svg');
+  position: absolute;
+  right: 20px;
+  top: 180px;
+}
+
+.btn.selection {
+  /* have to set background image */
+  background-image: url('/path/to/icon.svg');
+  position: absolute;
+  right: 20px;
+  top: 230px;
+}
+
 .arrayContainer {
   display: flex; /* note: Makes the container a flexbox - allows flexible arrangement of child elements */
   align-items: flex-end; /* note: Aligns all bars to the bottom of the container (so they grow upward) */
