--- a/src/sortingVisualizer/SortingVisualizer.css
+++ b/src/sortingVisualizer/SortingVisualizer.css
@@ -102,23 +102,14 @@
   bottom: -20px;
 }
 
+/**color legends */
+.colorLegends {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
 /** slider styles */
-.size-number {
-  display: inline-block;
-  animation: pop 0.25s ease-in-out;
-}
-
-@keyframes pop {
-  from {
-    transform: translateY(5px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
 input[type="range"] {
   width: 200px;
   height: 11px;
