--- a/src/sortingVisualizer/SortingVisualizer.css
+++ b/src/sortingVisualizer/SortingVisualizer.css
@@ -26,7 +26,7 @@
 }
 
 .sortingButtons {
-  position: fixed;      /** or absolute if you want it relative to a parent */
+  position: fixed;   
   top: 24px;            /** distance from the top of the screen */
   right: 24px;          /** distance from the right of the screen */
   display: flex;
