--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ h1 {
   justify-content: center;
   gap: 8px;
   display: flex;
-  transition: background 0.2s ease-out, color 0.2s ease-out, transform 0.2s ease-out;
+  transition: 0.2s ease-out, color 0.2s ease-out, transform 0.2s ease-out;
 }
 
 .btn:hover {
